manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "clu-154e"
    labels:
        app: "clu-154e"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: clua107-clu-154e.15fc640fcf844f028719.southcentralus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "clu-154e"
                servicePort: 80
